# NuOrder_Shopify

./: pyproject.toml  requirements.txt
FirstDraft/: docker-compose.yml  pyproject.toml
FirstDraft/App/: main.py  shopify_test.py
FirstDraft/App/Api/Version_1/Services/Mappers/: NuOrderToShopifyOrder.py
FirstDraft/App/Api/Version_1/Services/NuOrder/: OrdersEndpointServices.py
FirstDraft/App/Api/Version_1/Services/Shopify/: OrdersEndpointServices.py
FirstDraft/App/Config/: config.py
FirstDraft/App/Data/: NuOrder.json  Shopify.json  ShopifyOrders.json  sample.json
Production/App/: main.py  my_tests.py
Production/App/Config/: config.py
Production/App/Data/: ShopifyCreateBaseOrderResponse.json  ShopifyCreateBaseOrderResponse27_09_2023_16_50_01.json  ShopifyCreateOrderResponse29_09_2023_13_26_39.json  ShopifyCreateOrderResponse29_09_2023_13_56_25.json  ShopifyOrders.json  TestNuOrderProcessedOrder.json  TestShopifyOrders.json  line_items.js  postman_create_order.json
Production/App/Helpers/: GenaratedShopifyBaseOrders.json  Models.py  OrdersFromNuOrderToShopify.py  sku_to_product_id_mappings.json
Production/App/NuOrder/: EndpointServices.py
Production/App/Services/: Endpoints.py
Production/App/Shopify/: EndpointServices.py
Production/Test/: error.html  sample.json
